chlwlsdud